--- a/index.html
+++ b/index.html
@@ -1,13 +1,124 @@
 <!DOCTYPE html>
-<html lang="en">
+Tentu, ini adalah kode HTML lengkap untuk halaman resep "Ayam Goreng Mentega" yang bisa kamu gunakan di Visual Studio Code.
+
+Salin dan tempel kode di bawah ini ke dalam file baru di VS Code dan simpan dengan nama resep.html. Setelah disimpan, kamu bisa membukanya langsung di browser untuk melihat hasilnya.
+
+Kode HTML Lengkap
+HTML
+
+<!DOCTYPE html>
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>resep makanan</title>
+    <title>Resep Ayam Goreng Mentega Spesial</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: #fff;
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+        }
+        h1, h2 {
+            color: #c0392b;
+            border-bottom: 2px solid #f0f0f0;
+            padding-bottom: 10px;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            margin-bottom: 20px;
+        }
+        ul, ol {
+            padding-left: 20px;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        strong {
+            color: #c0392b;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 0.9em;
+            color: #777;
+        }
+    </style>
 </head>
 <body>
-    <h1>Ayam Goreng Mentega</h1>
-    <p>dibuat oleh :fachreza
-    <img src="20230211-Ayam-goreng-mentega.jpg" alt="gambar resep makanan">
+
+    <div class="container">
+        <h1>Resep Ayam Goreng Mentega Spesial & Lezat</h1>
+        
+        <img src="20230211-Ayam-goreng-mentega.jpg" alt="ayam goreng mentega">
+
+        <p>Ayam goreng mentega adalah hidangan klasik yang disukai banyak orang. Perpaduan rasa gurih dari mentega, manis dari kecap, dan aroma wangi dari bawang menciptakan cita rasa yang sempurna. Resep ini mudah diikuti bahkan untuk pemula sekalipun.</p>
+
+        <hr>
+
+        <h2>Bahan-Bahan</h2>
+        <ul>
+            <li><strong>1 ekor</strong> ayam, potong menjadi 8-10 bagian</li>
+            <li><strong>1 buah</strong> jeruk nipis</li>
+            <li><strong>1 sdt</strong> garam</li>
+            <li><strong>1/2 sdt</strong> merica bubuk</li>
+            <li>Minyak goreng secukupnya</li>
+        </ul>
+
+        <h3>Bumbu Saus Mentega:</h3>
+        <ul>
+            <li><strong>5 sdm</strong> margarin atau mentega</li>
+            <li><strong>1 buah</strong> bawang bombay, iris tipis</li>
+            <li><strong>3 siung</strong> bawang putih, geprek dan cincang halus</li>
+            <li><strong>4 sdm</strong> kecap manis</li>
+            <li><strong>2 sdm</strong> saus tiram</li>
+            <li><strong>1 sdm</strong> kecap Inggris</li>
+            <li><strong>1/2 sdt</strong> gula pasir</li>
+            <li><strong>50 ml</strong> air</li>
+            <li><strong>1 batang</strong> daun bawang, iris serong (opsional)</li>
+        </ul>
+
+        <hr>
+
+        <h2>Langkah-Langkah Memasak</h2>
+        <ol>
+            <li>
+                <strong>Marinasi Ayam:</strong> Cuci bersih potongan ayam, lalu lumuri dengan air perasan jeruk nipis, garam, dan merica. Diamkan selama minimal 15-30 menit agar bumbu meresap.
+            </li>
+            <li>
+                <strong>Goreng Ayam:</strong> Panaskan minyak dalam wajan. Goreng ayam yang telah dimarinasi hingga matang dan berwarna kuning keemasan. Angkat dan tiriskan.
+            </li>
+            <li>
+                <strong>Buat Saus:</strong> Panaskan mentega atau margarin di wajan yang berbeda. Tumis bawang bombay dan bawang putih hingga harum dan layu.
+            </li>
+            <li>
+                <strong>Campurkan Bumbu:</strong> Masukkan kecap manis, saus tiram, kecap Inggris, dan gula pasir. Aduk hingga rata.
+            </li>
+            <li>
+                <strong>Satukan Ayam dan Saus:</strong> Tuangkan sedikit air dan masak hingga saus sedikit mengental. Masukkan ayam yang sudah digoreng, aduk cepat hingga seluruh permukaan ayam terbalut saus.
+            </li>
+            <li>
+                <strong>Penyajian:</strong> Sesaat sebelum diangkat, masukkan irisan daun bawang (jika suka). Aduk sebentar, lalu angkat. Ayam goreng mentega siap disajikan selagi hangat dengan nasi putih.
+            </li>
+        </ol>
+
+        <hr>
+
+        <div class="footer">
+            <p>Selamat Mencoba & Semoga Berhasil! ❤️</p>
+        </div>
+    </div>
+
 </body>
 </html>
